--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,18 @@ project(InterpreteurC C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(
-        InterpreteurC main.c
-        src/c_files/log.c
-        src/includes_h/log.h
-        src/c_files/file.c
-        src/includes_h/file.h)
+# Include directories
+include_directories(${CMAKE_SOURCE_DIR}/src/includes_h)
+
+# Source files
+set(SOURCES
+    main.c
+    src/c_files/file.c
+    src/c_files/log.c
+)
+
+# Output directory for the executable
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
+
+# Add executable
+add_executable(prog ${SOURCES})
