--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,10 @@ set(SOURCES
     src/c_files/file.c
     src/c_files/log.c
     src/c_files/lexer.c
-    src/c_files/shunting-yard.c
     src/c_files/manage_list.c
-        src/c_files/test.c src/includes_h/test.h)
+        src/c_files/test.c src/includes_h/test.h
+        src/includes_h/ast.h
+        src/c_files/ast.c)
 
 # Output directory for the executable
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
