added variable gestion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,8 @@ set(SOURCES
     src/c_files/manage_list.c
         src/c_files/test.c src/includes_h/test.h
         src/includes_h/ast.h
-        src/c_files/ast.c)
+        src/c_files/ast.c
+        src/includes_h/global.h)
 
 # Output directory for the executable
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
